--- a/GettingReal/GettingReal.csproj
+++ b/GettingReal/GettingReal.csproj
@@ -33,6 +33,8 @@
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,10 +48,39 @@
     <Compile Include="DateTimeSpan.cs" />
     <Compile Include="Cow.cs" />
     <Compile Include="CowTests.cs" />
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NyKalv.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NyKalv.Designer.cs">
+      <DependentUpon>NyKalv.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TableAfKalve.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TableAfKalve.Designer.cs">
+      <DependentUpon>TableAfKalve.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NyKalv.resx">
+      <DependentUpon>NyKalv.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TableAfKalve.resx">
+      <DependentUpon>TableAfKalve.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
