--- a/Boot/Boot.csproj
+++ b/Boot/Boot.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8F71F1B5-A8A2-4696-B00B-D344AE41359A}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{F5E06DB9-78E5-4563-938A-48E4383F6D01}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GettingReal</RootNamespace>
-    <AssemblyName>GettingReal</AssemblyName>
+    <RootNamespace>Boot</RootNamespace>
+    <AssemblyName>Boot</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -29,8 +29,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -44,15 +46,43 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CowCRUD.cs" />
-    <Compile Include="CowRepository.cs" />
-    <Compile Include="DateTimeSpan.cs" />
-    <Compile Include="Cow.cs" />
-    <Compile Include="CowTests.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="Kalve.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kalve.Designer.cs">
+      <DependentUpon>Kalve.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NyKalv.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NyKalv.Designer.cs">
+      <DependentUpon>NyKalv.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+    <EmbeddedResource Include="Kalve.resx">
+      <DependentUpon>Kalve.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NyKalv.resx">
+      <DependentUpon>NyKalv.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GettingReal\GettingReal.csproj">
+      <Project>{8f71f1b5-a8a2-4696-b00b-d344ae41359a}</Project>
+      <Name>GettingReal</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
