--- a/GettingReal/GettingReal.csproj
+++ b/GettingReal/GettingReal.csproj
@@ -44,43 +44,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CowCRUD.cs" />
-    <Compile Include="CowRepository.cs" />
     <Compile Include="DateTimeSpan.cs" />
     <Compile Include="Cow.cs" />
     <Compile Include="CowTests.cs" />
-    <Compile Include="Login.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Login.Designer.cs">
-      <DependentUpon>Login.cs</DependentUpon>
-    </Compile>
-    <Compile Include="NyKalv.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="NyKalv.Designer.cs">
-      <DependentUpon>NyKalv.cs</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TableAfKalve.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="TableAfKalve.Designer.cs">
-      <DependentUpon>TableAfKalve.cs</DependentUpon>
-    </Compile>
+    <Compile Include="User.cs" />
+    <Compile Include="UserLogin.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Login.resx">
-      <DependentUpon>Login.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="NyKalv.resx">
-      <DependentUpon>NyKalv.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="TableAfKalve.resx">
-      <DependentUpon>TableAfKalve.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
